provision/modules/kind/bootstrap-apps/grafana/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - "grafana.company-test.com"
  http:
    - route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 3000
